Revert "fixing overflow-x on mobile"
This reverts commit 28202bca72c7e25d4b4056803e428a60be3045f5.

--- a/inc/style.css
+++ b/inc/style.css
@@ -382,16 +382,6 @@ h2{
   position: relative;
   left: 1px;
 }
-
-#view_wrapper{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    overflow-x: hidden;
-}
-
 .sliding{
   -webkit-transition: all .5s ease-in-out;
   -moz-transition: all .5s ease-in-out;
